--- a/Face 2 Face/Face_2_Face.Droid/Resources/layout/Main.axml
+++ b/Face 2 Face/Face_2_Face.Droid/Resources/layout/Main.axml
@@ -32,15 +32,15 @@
         android:text="Login"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/button1" />
+        android:id="@+id/BtnLogin" />
     <Button
         android:text="-Forgot My Password-"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/button2" />
+        android:id="@+id/btnForgot" />
     <Button
         android:text="SignUp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/button3" />
+        android:id="@+id/BtnSignUp" />
 </LinearLayout>
