--- a/Face 2 Face/Face_2_Face.Droid/Resources/layout/Main.axml
+++ b/Face 2 Face/Face_2_Face.Droid/Resources/layout/Main.axml
@@ -19,6 +19,11 @@
         android:textColor="@android:color/black"
         android:id="@+id/textView2"
         android:layout_marginTop="30dp" />
+    <EditText
+        android:inputType="textEmailAddress"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/editText1" />
     <TextView
         android:text="Password:"
         android:textAppearance="?android:attr/textAppearanceMedium"
@@ -26,21 +31,33 @@
         android:layout_height="wrap_content"
         android:textColor="@android:color/black"
         android:id="@+id/textView3"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="20dp" />
+    <EditText
+        android:inputType="textPassword"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/editText2"
         android:layout_marginBottom="40dp" />
     <Button
         android:text="Login"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/BtnLogin" />
+        android:id="@+id/BtnLogin"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginBottom="10dp" />
     <Button
         android:text="-Forgot My Password-"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/btnForgot" />
+        android:id="@+id/btnForgot"
+        android:layout_gravity="center_horizontal"
+        android:textColor="@android:color/black"
+        android:background="@android:color/background_light"
+        android:layout_marginBottom="10dp" />
     <Button
         android:text="SignUp"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/BtnSignUp" />
+        android:id="@+id/BtnSignUp"
+        android:layout_gravity="center_horizontal" />
 </LinearLayout>
