--- a/Face 2 Face/Face_2_Face.Droid/Resources/layout/Main.axml
+++ b/Face 2 Face/Face_2_Face.Droid/Resources/layout/Main.axml
@@ -10,33 +10,33 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textColor="@android:color/black"
-        android:id="@+id/textView1" />
+        android:id="@+id/textViewLogin" />
     <TextView
         android:text="E-Mail:"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textColor="@android:color/black"
-        android:id="@+id/textView2"
+        android:id="@+id/textViewEmail"
         android:layout_marginTop="30dp" />
     <EditText
         android:inputType="textEmailAddress"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/editText1" />
+        android:id="@+id/editTextEmail" />
     <TextView
         android:text="Password:"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textColor="@android:color/black"
-        android:id="@+id/textView3"
+        android:id="@+id/textViewPassword"
         android:layout_marginTop="20dp" />
     <EditText
         android:inputType="textPassword"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/editText2"
+        android:id="@+id/editTextPassword"
         android:layout_marginBottom="40dp" />
     <Button
         android:text="Login"
@@ -51,7 +51,7 @@
         android:layout_height="wrap_content"
         android:id="@+id/btnForgot"
         android:layout_gravity="center_horizontal"
-        android:textColor="@android:color/black"
+        android:textColor="@android:color/holo_blue_dark"
         android:background="@android:color/background_light"
         android:layout_marginBottom="10dp" />
     <Button
