--- a/Face 2 Face/Face_2_Face.Droid/Resources/layout/Main.axml
+++ b/Face 2 Face/Face_2_Face.Droid/Resources/layout/Main.axml
@@ -23,6 +23,7 @@
         android:inputType="textEmailAddress"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:textColor="@android:color/black"
         android:id="@+id/editTextEmail" />
     <TextView
         android:text="Password:"
@@ -37,6 +38,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/editTextPassword"
+        android:textColor="@android:color/black"
         android:layout_marginBottom="40dp" />
     <Button
         android:text="Login"
